fix(front): i#3919 spacing text editor

--- a/javascript/apps/taiga/src/assets/editor/iframe.css
+++ b/javascript/apps/taiga/src/assets/editor/iframe.css
@@ -74,23 +74,23 @@ a {
 }
 
 ul {
-  margin-block: 0 2.5rem;
-  margin-block-end: 0.5rem;
+  margin-block-end: 0;
+  margin-block-start: 0.75rem;
   padding-inline-start: 1.4rem;
 }
 
 ol {
   display: block;
   list-style-type: decimal;
-  margin-block-end: 1em;
-  margin-block-start: 1em;
+  margin-block-end: 0;
+  margin-block-start: 0.75rem;
   margin-inline-end: 0;
   margin-inline-start: 0;
-  padding-inline-start: 40px;
+  padding-inline-start: 1.4rem;
 }
 
 li {
-  margin-block-end: 0.4rem;
+  margin-block-start: 0.25rem;
 }
 
 hr {
